# rdu-timeline-analysis

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  rdu_timeline_analysis.ipynb  rdu_timeline_methods.py  rdu_timeline_run_analysis.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
data/: provenance.csv
data/canonical/: rdu_timeline_data.csv
docs/: _config.yml  assumptions.md  contributing-data.md  data.md  index.md  key-findings.md  methods.md  pending-cases.md  research-question.md  results.md  updates.md
docs/_includes/: footer.html
docs/results/latest/: manifest.json
notebooks/: rdu_timeline_analysis.ipynb
results/latest/: manifest.json
results/latest/processed/: dataset_filtered.csv
results/snapshots/2026-03-15/: manifest.json
results/snapshots/2026-03-16/: manifest.json
results/snapshots/2026-03-17/: manifest.json
results/snapshots/2026-03-18/: manifest.json
results/snapshots/2026-03-19/: manifest.json
results/snapshots/2026-03-20/: manifest.json
results/snapshots/2026-03-22/: manifest.json
results/snapshots/2026-03-25/: manifest.json
results/snapshots/2026-03-26/: manifest.json
results/snapshots/2026-03-27/: manifest.json
results/snapshots/2026-03-28/: manifest.json
schemas/: rdu_timeline_data.schema.json
scripts/: run_analysis.py  validate_data.py
src/rdu_timeline_analysis/: __init__.py  io.py  models.py  pipeline.py  plots.py  validation.py
tables/: pending_predictions.csv
tests/: test_models.py  test_parsing.py  test_pipeline_outputs.py  test_tte_builders.py
(+80 files in other folders)
