[project]
name = "rdu-timeline-analysis"
version = "0.1.0"
description = "RDU USCIS AOS crowdsourced timeline analysis and publication pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.0",
  "nbformat>=5.10.0",
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "scipy>=1.15.0",
  "seaborn>=0.13.0",
]

[dependency-groups]
dev = [
  "black>=24.10.0",
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdu_timeline_analysis"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
